repo fixes, no compiled files here!

--- a/index.pug
+++ b/index.pug
@@ -5,16 +5,16 @@ html
 	head
 		meta(content="charset=utf-8")
 		title Ammelie Neth - Front End Developer
-		link(href="//fonts.googleapis.com/earlyaccess/mplus1p.css")
+		link(href="https://fonts.googleapis.com/css?family=Arimo:400,400i|Playfair+Display:400,900&amp;subset=latin-ext" rel="stylesheet")
 		link(href="styles.css", rel="stylesheet")
 	body
 		div.wrapper
 			+screen("intro")
 				header
+					nav
 					div.header-text
 						h1 Hi
 						p It me.
-					nav
 			+screen("about")
 			+screen("portfolio")
 			+screen("contact")
