--- a/styles.sass
+++ b/styles.sass
@@ -9,12 +9,34 @@ $background: #011C27
 $text: #EAEBED
 
 
-//  FONT STYLES   //
-=header
+
+//   FONT STYLES   //
+h1, h2, h3, h4, h5, h6
 	font-family: 'Playfair Display', serif
 
-=paragraph
-	font-family: 'Arimo', sans-serif
+h1
+	font-size: 6rem
+
+h2
+	font-size: 2rem
+	margin-bottom: 2rem
+
+p
+	font-family: 'Roboto', sans-serif
+	font-size: 1rem
+	font-weight: 200
+	line-height: 1.5rem
+
+nav
+	ul li
+		font-family: 'Roboto', sans-serif
+		margin-bottom: 1rem
+		text-transform: capitalize
+
+a
+	color: $accent
+	text-decoration: none
+
 
 
 //   FLEX MIXINS   //
@@ -27,6 +49,7 @@ $text: #EAEBED
 	display: flex
 	flex-flow: row wrap
 	align-items: $alignment
+
 
 
 //   SASS MAGIC   //
@@ -46,14 +69,9 @@ body
 	@media(min-width: 1600px)
 		width: 50vw
 
-header
-	+flex-col(stretch)
-	.header
-		
-	nav
-		background: $menu
-		height: 10vh
-
 .screen
 	height: 100vh
-	border: 1px solid $accent
+	+flex-col(flex-start)
+	justify-content: center
+	border: 1px solid $blue
+	margin: 0 5%
