--- a/styles.sass
+++ b/styles.sass
@@ -1,37 +1,118 @@
 @import "reset"
 
-//   COLORS   //
+/********************/
+/*		COLORS		*/
+/********************/
 $accent: #F2545B
 $blue: #133C55
 $grey: #364359
-$menu: #202C39
 $background: #011C27
 $text: #EAEBED
 
 
+/****************************/
+/*		GENERAL LAYOUT		*/
+/****************************/
+.screen
+	min-height: 100vh
+	margin: 0 5%
 
-//   FONT STYLES   //
-h1, h2, h3, h4, h5, h6
+.screen-intro, .screen-about, .about-text
+	display: flex
+	flex-flow: column nowrap
+	justify-content: center
+
+
+/****************************/
+/*		ABOUT LAYOUT		*/
+/****************************/
+.about-content
+	display: flex
+	flex-flow: column nowrap
+	align-items: center
+	@media (min-width: 800px)
+		display: grid
+		grid-template-columns: 2fr 1fr
+		grid-column-gap: 2rem
+
+.portrait-container
+	display: grid
+	grid-template-columns: 1fr
+	grid-template-rows: 1fr
+
+.portrait
+	grid-column: 1
+	grid-row: 1
+
+.hidden-portrait
+	grid-column: 1
+	grid-row: 1
+
+
+
+/****************************/
+/*		RESUME LAYOUT		*/
+/****************************/
+.resume-content
+	display: grid
+	grid-row-gap: 1rem
+
+@media (min-width: 950px)
+	.resume-columns
+		display: flex
+		justify-content: space-between
+
+	.resume-content
+		width: 41vw
+
+	.short-info
+		display: grid
+		grid-template-columns: 1fr 1fr
+		grid-column-gap: 80px
+
+
+
+/****************************/
+/*		CONTACT LAYOUT		*/
+/****************************/
+.screen-contact
+	display: flex
+	flex-flow: column nowrap
+	justify-content: center
+	text-align: center
+
+	.links
+		display: flex
+		justify-content: center
+
+
+
+/****************************/
+/*		GLOBAL STYLING		*/
+/****************************/
+body
+	font-family: 'Assistant', sans-serif
+	background: $background
+	font-size: 16px
+	color: $text
+
+h1, h2, h3, h4, h5, h6, .short-info
 	font-family: 'Playfair Display', serif
 
 h1
 	font-size: 6rem
 
 h2
-	font-size: 2rem
+	font-size: 3rem
 	margin-bottom: 2rem
 
-p
-	font-family: 'Assistant', sans-serif
-	font-size: 1rem
-	line-height: 1.5rem
-	margin-bottom: 1rem
+h3
+	font-size: 1.7rem
 
-nav
-	ul li
-		font-family: 'Assistant', sans-serif
-		margin-bottom: 1rem
-		text-transform: capitalize
+p
+	font-size: 1rem
+	line-height: 1.3rem
+	margin-bottom: 1rem
 
 a
 	color: $accent
@@ -45,54 +126,98 @@ p a
 
 
 
-//   LAYOUT   //
-.intro, .about, .about-text
-	display: flex
-	flex-flow: column nowrap
-	justify-content: center
-
-.about-content
-	display: flex
-	flex-flow: column nowrap
-	align-items: center
-	@media (min-width: 800px)
-		display: grid
-		grid-template-columns: 2fr 1fr
-		grid-column-gap: 2rem
-
-.resume
-
-.portfolio
-
-.contact
+/************************/
+/*		INTRO NAV		*/
+/************************/
+nav ul li
+	margin-bottom: 1rem
+	text-transform: capitalize
 
 
-//   SASS MAGIC   //
-body
-	background: $background
-	font-size: 16px
+
+/************************/
+/*		BACK ARROW		*/
+/************************/
+.go-back
 	color: $text
-	text-align: justify
+	float: right
+	position: fixed
+	right: 3%
+	bottom: 3%
+	opacity: 0
+	transition: opacity 1s
 
-.screen
-	height: 100vh
-	// border: 1px solid $blue
-	margin: 0 5%
+.go-back i
+	background: $grey
+	border-radius: 50%
+	line-height: 3rem
 
+.go-back.make-visible
+	opacity: 1
+
+
+
+/****************************/
+/*		ABOUT PORTRAIT		*/
+/****************************/
 .portrait
 	height: auto
 	width: 300px
 	border-radius: 50%
-	// @media(min-width: 800px)
-	// 	border-radius: 0
 
-#portrait2
-	margin-top: -300px
+.hidden-portrait
 	opacity: 0
 	transition: opacity 0.8s
-	@media(min-width: 800px)
-		height: 0
-		width: 0
 
-#portrait2.smile
+.hidden-portrait.smile
 	opacity: 1
+
+
+
+/****************************/
+/*		RESUME STYLES		*/
+/****************************/
+.screen-resume h2
+	padding-top: 3rem
+
+.resume-column-header
+	margin-top: 3rem
+	margin-bottom: 2rem
+	padding: 20px 0 20px 0
+	border-top: 1px solid $accent
+	border-bottom: 1px solid $accent
+
+.resume-description
+	margin-bottom: 3rem
+
+.resume-entry
+	border-bottom: 1px solid $blue
+
+.resume-entry:last-of-type
+	border: none
+
+.resume-entry ul
+	list-style: disc
+	line-height: 1.3rem
+
+.resume-entry .short-info *
+	line-height: inherit
+	margin-bottom: 1rem
+
+@media (min-width: 950px)
+	.resume-entry .short-info *
+		min-height: 1.5rem
+
+	.short-info *:nth-child(odd)
+		text-align: left
+
+	.short-info *:nth-child(even)
+		text-align: right
+
+
+
+/****************************/
+/*		CONTACT STYLES		*/
+/****************************/
+.links a
+	margin: 0 2rem 0 2rem
