Final final changes to layout :)

--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,7 @@ html
 	include mixins.pug
 	
 	head
-		meta(content="charset=utf-8")
+		meta(charset="utf-8")
 		title Ammelie Neth - Front End Developer
 		link(href="https://fonts.googleapis.com/css?family=Assistant:300:700|Playfair+Display:400,900&amp;subset=latin-ext" rel="stylesheet")
 		link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet")
