--- a/styles.sass
+++ b/styles.sass
@@ -31,14 +31,20 @@ $text: #EAEBED
 	flex-flow: column nowrap
 	align-items: center
 	@media (min-width: 800px)
-		display: grid
-		grid-template-columns: 2fr 1fr
-		grid-column-gap: 2rem
+		flex-flow: row nowrap
+		justify-content: center
+
+.about-text
+	@media (min-width: 800px)
+		max-width: 40vw
 
 .portrait-container
 	display: grid
 	grid-template-columns: 1fr
 	grid-template-rows: 1fr
+	margin-top: 2rem
+	@media (min-width: 800px)
+		margin: 0 0 0 2rem
 
 .portrait
 	grid-column: 1
