--- a/index.pug
+++ b/index.pug
@@ -2,6 +2,8 @@ doctype html
 html
 	include mixins.pug
 	
+	// I wrote this page in pug and SASS. You can view the actual source code here: https://github.com/Ammelie/Portfolio
+	
 	head
 		meta(charset="utf-8")
 		title Ammelie Neth - Front End Developer
@@ -10,6 +12,7 @@ html
 		link(href="styles.css", rel="stylesheet")
 		script(src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous")
 		script(src="scripts.js")
+		
 	body
 		span(class="go-back")
 			i(class="fa fa-chevron-circle-up fa-5x" aria-hidden="true")
@@ -59,6 +62,9 @@ html
 					i(class="fa fa-instagram fa-5x" aria-hidden="true")
 				a(href="mailto:ammelieneth@gmail.com")
 					i(class="fa fa-envelope-o fa-5x" aria-hidden="true")
+				a(href="https://github.com/Ammelie/Portfolio")
+					i(class="fa fa-github fa-5x" aria-hidden="true")
+					
 					
 
 			
