styling fixes and small changes

--- a/education.pug
+++ b/education.pug
@@ -3,7 +3,7 @@
 	'KYH',
 	'Stockholm, Sweden',
 	'September 2016 – Present',
-	'Web focused, project based program where we learn HTML5, CSS3, JavaScript + frameworks as well as agile work methods. The program prepares us for work in web development, and finishes with an almost 6 month long internship at a company in the business.'
+	'Web focused, project based program where we learn HTML5, CSS3, JavaScript + frameworks such as React, as well as agile work methods. The program prepares us for work in web development, and finishes with an almost 6 month long internship at a company in the business.'
 )
 
 +resume-entry(
