--- a/index.pug
+++ b/index.pug
@@ -5,7 +5,7 @@ html
 	// I wrote this page in pug and SASS. You can view the actual source code here: https://github.com/Ammelie/Portfolio
 	
 	head
-		meta(charset="utf-8")
+		meta(charset="utf-8" name="viewport" content="width=device-width")
 		title Ammelie Neth - Front End Developer
 		link(href="https://fonts.googleapis.com/css?family=Assistant:300:700|Playfair+Display:400,900&amp;subset=latin-ext" rel="stylesheet")
 		link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet")
@@ -31,7 +31,10 @@ html
 						My name is Ammelie. I'm really into web development, specifically JavaScript programming and design. I also really like
 						animals, video games, and drink a lot of tea.
 					p.
-						I am currently looking for a company where I can do a 5 month internship starting mid November, followed by thesis work.
+						I am currently doing my 5 month internship and thesis work at
+						#[a(href="https://chas.se/")="Chas Visual Management AB"],
+						where I'm focusing on React development.
+					p.	
 						If you or someone you know is looking to hire a junior developer and would like to have a chat, please
 						#[a(href="index.html#contact")="contact me"]! I would love to talk to you.
 					p.
@@ -57,14 +60,10 @@ html
 			h2 Get In Touch
 			div(class="links")
 				a(href="https://www.linkedin.com/in/ammelieneth/")
-					i(class="fa fa-linkedin fa-5x" aria-hidden="true")
+					i(class="fa fa-linkedin fa-5x fa-fw" aria-hidden="true")
 				a(href="https://www.instagram.com/smorpopcorn/")
-					i(class="fa fa-instagram fa-5x" aria-hidden="true")
+					i(class="fa fa-instagram fa-5x fa-fw" aria-hidden="true")
 				a(href="mailto:ammelieneth@gmail.com")
-					i(class="fa fa-envelope-o fa-5x" aria-hidden="true")
+					i(class="fa fa-envelope-o fa-5x fa-fw" aria-hidden="true")
 				a(href="https://github.com/Ammelie/Portfolio")
-					i(class="fa fa-github fa-5x" aria-hidden="true")
-					
-					
-
-			
+					i(class="fa fa-github fa-5x fa-fw" aria-hidden="true")
